--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,5 @@
 [tox]
 envlist = py35,py36,py37,py38,py39
 [testenv]
-commands=python -m cvehound.__init__ --dir /home/work/workspace/linux -v --cve CVE-2020-25669 CVE-2020-27068
+extras = tests
+commands = python -m cvehound.__init__ --dir /home/work/workspace/linux -v --cve CVE-2020-25669 CVE-2020-27068
