--- a/tox.ini
+++ b/tox.ini
@@ -2,4 +2,4 @@
 envlist = py35,py36,py37,py38,py39
 [testenv]
 extras = tests
-commands = python -m cvehound.__init__ --dir /home/work/workspace/linux -v --cve CVE-2020-25669 CVE-2020-27068
+commands = pytest
