--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,6 @@ norecursedirs = linux
 addopts = -rA --show-capture=stderr
 testpaths =
     tests
+markers =
+    slow: mark test as slow to run
+    notbackported: mark test as failed
