actions: run tests only on python 3.5
Signed-off-by: Denis Efremov <efremov@linux.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.5, 3.9]
+        python-version: [3.5]
         os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
