--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,7 @@ jobs:
       matrix:
         python-version: [3.5]
         os: [ubuntu-latest]
+        ocaml-version: [4.11.1]
         coccinelle-version: [system, 1.0.8, git]
 
     runs-on: ${{ matrix.os }}
@@ -29,6 +30,16 @@ jobs:
     - uses: actions/checkout@v2
       with:
           fetch-depth: 0
+
+    - name: Cache Opam
+      uses: actions/cache@v2
+      if: ${{ matrix.coccinelle-version != 'system' }}
+      with:
+        path: ~/.opam
+        key: ${{ runner.os }}-opam-${{ matrix.ocaml-version }}-${{ matrix.coccinelle-version }}
+        restore-keys: |
+          ${{ runner.os }}-opam-${{ matrix.ocaml-version }}-
+          ${{ runner.os }}-opam-
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
@@ -51,7 +62,9 @@ jobs:
         wget --quiet --no-clobber https://github.com/ocaml/opam/releases/download/2.0.8/opam-2.0.8-x86_64-linux -O opam
         chmod +x opam
         sudo mv opam /usr/local/bin
-        opam init --auto-setup --disable-sandboxing --compiler=4.11.1
+        opam init --auto-setup --disable-sandboxing --compiler=${{ matrix.ocaml-version }}
+        opam update
+        opam upgrade --yes
 
     - name: Install Coccinelle with opam (${{ matrix.coccinelle-version }})
       if: ${{ matrix.coccinelle-version != 'system' && matrix.coccinelle-version != 'git' }}
