Add lkc metadata tests
Signed-off-by: Denis Efremov <efremov@linux.com>

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,3 +8,4 @@ markers =
     slow: mark test as slow to run
     fast: fast tests that are duplicated by slow ones
     notbackported: mark test as failed
+    lkc: test kernelcves.json file from linuxkernelcves.com
