--- a/pytest.ini
+++ b/pytest.ini
@@ -8,4 +8,5 @@ markers =
     slow: mark test as slow to run
     fast: fast tests that are duplicated by slow ones
     notbackported: mark test as failed
+    ownfixes: mark test as failed
     lkc: test kernelcves.json file from linuxkernelcves.com
