Add git mode test
Signed-off-by: Denis Efremov <efremov@linux.com>

--- a/pytest.ini
+++ b/pytest.ini
@@ -10,3 +10,5 @@ markers =
     notbackported: mark test as failed
     ownfixes: mark test as failed
     lkc: test kernelcves.json file from linuxkernelcves.com
+    nometadata: mark test as failed
+    brokenmetadata: mark test as failed
