--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.5]
-        os: [ubuntu-latest]
+        os: [ubuntu-18.04] # coccinelle 1.0.4, no coccinelle in ubuntu 20.04
         ocaml-version: [4.07.1]
         coccinelle-version: [system, 1.0.7, 1.0.8, 1.0.9, 1.1.0, git]
     runs-on: ${{ matrix.os }}
@@ -79,8 +79,6 @@ jobs:
     - name: Install system Coccinelle with apt
       if: ${{ matrix.coccinelle-version == 'system' }}
       run: |
-        sudo add-apt-repository ppa:npalix/coccinelle
-        sudo apt-get update -qq
         sudo apt-get install -y coccinelle
 
     - name: Set up Opam
