--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,9 +58,9 @@ jobs:
       if: ${{ matrix.coccinelle-version != 'system' }}
       with:
         path: ~/.opam
-        key: ${{ runner.os }}-opam-${{ matrix.ocaml-version }}-${{ matrix.coccinelle-version }}
+        key: ${{ runner.os }}-opam-2.1.0-${{ matrix.ocaml-version }}-${{ matrix.coccinelle-version }}
         restore-keys: |
-          ${{ runner.os }}-opam-${{ matrix.ocaml-version }}-
+          ${{ runner.os }}-opam-2.1.0-${{ matrix.ocaml-version }}-
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
@@ -79,7 +79,7 @@ jobs:
       if: ${{ matrix.coccinelle-version != 'system' }}
       run: |
         sudo apt-get install -y python-dev aspcud ocaml
-        wget --quiet --no-clobber https://github.com/ocaml/opam/releases/download/2.0.8/opam-2.0.8-x86_64-linux -O opam
+        wget --quiet --no-clobber https://github.com/ocaml/opam/releases/download/2.1.0/opam-2.1.0-x86_64-linux -O opam
         chmod +x opam
         sudo mv opam /usr/local/bin
         opam init --auto-setup --disable-sandboxing --compiler=${{ matrix.ocaml-version }}
