--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,7 +42,7 @@ jobs:
         python-version: [3.5]
         os: [ubuntu-18.04] # coccinelle 1.0.4, no coccinelle in ubuntu 20.04
         ocaml-version: [4.07.1]
-        coccinelle-version: [system, 1.0.7, 1.0.8, 1.0.9, 1.1.0, git]
+        coccinelle-version: [system, 1.0.7, 1.0.8, 1.0.9, 1.1.0, 1.1.1, git]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
