--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install CVEhound
-      run: pip3 install 'git+https://github.com/evdenis/cvehound.git@master'
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install 'git+https://github.com/evdenis/cvehound.git@master'
 
     - name: Run CVEHound
       run: |
