--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,8 +27,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - uses: actions/checkout@v3
+
     - name: Install CVEhound
-      run: python -m pip install git+$GITHUB_SERVER_URL/$GITHUB_REPOSITORY.git@$GITHUB_REF_NAME
+      run: python -m pip install .
 
     - name: Run CVEHound
       run: |
