Update ubuntu-18.04 to ubuntu-20.04
Ubuntu-18.04 is deprecated in github actions.

Signed-off-by: Denis Efremov <efremov@linux.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,9 +47,9 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.5]
-        os: [ubuntu-18.04] # coccinelle 1.0.4, no coccinelle in ubuntu 20.04
+        os: [ubuntu-20.04]
         ocaml-version: [4.07.1]
-        coccinelle-version: [system, 1.0.7, 1.0.8, 1.0.9, 1.1.0, 1.1.1, git]
+        coccinelle-version: [1.0.7, 1.0.8, 1.0.9, 1.1.0, 1.1.1, git]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
