Suppress pip3 version check during tests
Signed-off-by: Denis Efremov <efremov@linux.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install CVEhound
-      run: python -m pip install .
+      run: python -m pip --disable-pip-version-check install .
 
     - name: Run CVEHound
       run: |
