Use ocaml/setup-ocaml
Signed-off-by: Denis Efremov <efremov@linux.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,15 +60,6 @@ jobs:
       id: date
       run: echo "date=$(date +'%Y-%m')" >> $GITHUB_OUTPUT
 
-    - name: Cache Opam
-      uses: actions/cache@v3
-      if: ${{ matrix.coccinelle-version != 'system' }}
-      with:
-        path: ~/.opam
-        key: ${{ runner.os }}-opam-2.1.5-${{ matrix.ocaml-version }}-${{ matrix.coccinelle-version }}
-        restore-keys: |
-          ${{ runner.os }}-opam-2.1.5-${{ matrix.ocaml-version }}-
-
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
@@ -84,16 +75,17 @@ jobs:
       run: |
         sudo apt-get install -y coccinelle
 
-    - name: Set up Opam
+    - name: Install system dependencies for opam and coccinelle
       if: ${{ matrix.coccinelle-version != 'system' }}
       run: |
         sudo apt-get install -y python-dev aspcud ocaml
-        wget --quiet --no-clobber https://github.com/ocaml/opam/releases/download/2.1.5/opam-2.1.5-x86_64-linux -O opam
-        chmod +x opam
-        sudo mv opam /usr/local/bin
-        opam init --auto-setup --disable-sandboxing --compiler=${{ matrix.ocaml-version }}
-        opam update
-        opam upgrade --yes
+
+    - name: Setup Opam
+      if: ${{ matrix.coccinelle-version != 'system' }}
+      uses: ocaml/setup-ocaml@v2
+      with:
+        ocaml-compiler: ${{ matrix.ocaml-version }}
+        opam-disable-sandboxing: true
 
     - name: Install Coccinelle with opam (${{ matrix.coccinelle-version }})
       if: ${{ matrix.coccinelle-version != 'system' && matrix.coccinelle-version != 'git' }}
