--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -155,9 +155,4 @@ jobs:
       run: |
         sudo setcap cap_sys_nice,cap_sys_admin+eip $(realpath $(which python3))
         which opam >/dev/null 2>&1 && eval $(opam env)
-        readarray RULES < <(git diff --name-only ${{ github.event.before }}..${{ github.event.after }} | grep -o 'CVE-[[:digit:]]*-[[:digit:]]*')
-        if [[ ${#RULES[@]} -gt 0 && ${#RULES[@]} -le 5 ]]; then
-          pytest --runslow $(for rule in ${RULES[@]}; do echo " --cve=$rule "; done)
-        else
-          pytest
-        fi
+        pytest --runslow --cve CVE-2023-2236
