--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
         python-version: [3.8]
         os: [ubuntu-20.04]
         ocaml-version: [4.07.1]
-        coccinelle-version: [1.0.7, 1.0.8, 1.0.9, 1.1.0, 1.1.1, git]
+        coccinelle-version: [git]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
