--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,7 +52,7 @@ jobs:
         python-version: [3.8]
         os: [ubuntu-20.04]
         ocaml-version: [4.07.1]
-        coccinelle-version: [1.0.7, 1.0.8, 1.0.9, 1.1.0, 1.1.1, 1.2, git]
+        coccinelle-version: [1.0.7, 1.0.8, 1.0.9, 1.1.0, 1.1.1, 1.2, 1.3.0, git]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
